Configure DB from a conventional mongo URI